# towercrane-prototype

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-release.yml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/entities/user/: index.ts
src/entities/user/model/: user.ts
src/features/auth/: AuthScreen.tsx  ForgotPassword.tsx  Login.tsx  Signup.tsx  api.ts
src/features/chat/: ChannelList.tsx  ChatView.tsx  MemberList.tsx  MessageSearch.tsx  RoomList.tsx  api.ts  mention.ts  unread-store.ts  useMeetingInbox.ts  useMeetingSocket.ts
src/features/org/: OrgTree.tsx  api.ts
src/features/prototype/: api.ts
src/shared/api/: client.ts
src/shared/lib/: app-settings-store.ts  avatar-color.ts  rail-themes.ts  useAppUpdate.ts  useColumnResize.ts  utils.ts
src/shared/ui/: AppUpdateCard.tsx  PageHeader.tsx  Select.tsx  Toast.tsx  button.tsx  card.tsx  compact-select.tsx  input.tsx  label.tsx  switch.tsx
src/shared/ui/lexical/: lexical-editor.tsx  theme.ts  toolbar.tsx
src/shared/ui/lexical/components/: image-component.tsx  youtube-component.tsx
src/shared/ui/lexical/nodes/: image-node.tsx  youtube-node.tsx
src/widgets/app-shell/: AppShell.tsx  WindowControls.tsx
src/widgets/chat/: ChatModule.tsx
src/widgets/home/: HomePage.tsx
src/widgets/messenger/: Messenger.tsx
src/widgets/profile/: ProfilePage.tsx
src/widgets/prototype/: PrototypeModule.tsx
src/widgets/settings/: SettingsPage.tsx
(+4 files in other folders)
