[package]
name = "towercrane-prototype-tauri"
version = "0.1.2"
description = "Towercrane Prototype - 프로토타입 카탈로그/리뷰 도구"
authors = ["you"]
edition = "2021"

[lib]
name = "towercrane_prototype_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 업데이터는 데스크톱 전용
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
